--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "dacastro4/laravel-gmail": "^6.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+      "ext-gd": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
